--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "short_name": "ToDo",
   "name": "Offline ToDoList ",
   "id": "https://codersam10.github.io/todo-list-react/",
-  "start_url": "/",
+  "start_url": "/todo-list-react/",
   "background_color": "hsl(0, 0%, 85%)",
   "theme_color": "hsl(248, 100%, 68%)",
   "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "display": "browser",
-  "scope": "/",
+  "scope": "/todo-list-react/",
   "description": "A todo list webapp with offline support",
   "icons": [
     {
@@ -19,20 +19,6 @@
       "src": "src/assets/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/images/screenshot1.png",
-      "type": "image/png",
-      "sizes": "540x720",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/images/screenshot2.jpg",
-      "type": "image/jpg",
-      "sizes": "720x540",
-      "form_factor": "wide"
     }
   ]
 }
