--- a/assets/manifest-ZsYtWdy1.json
+++ b/assets/manifest-ZsYtWdy1.json
@@ -7,7 +7,7 @@
   "theme_color": "hsl(248, 100%, 68%)",
   "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "display": "browser",
-  "scope": "/",
+  "scope": "/todo-list-react/",
   "description": "A todo list webapp with offline support",
   "icons": [
     {
