--- a/assets/manifest-CvHQ24vr.json
+++ b/assets/manifest-CvHQ24vr.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "ToDo",
+  "short_name": "Tasks",
   "name": "Offline ToDoList ",
   "id": "https://codersam10.github.io/todo-list-react/",
   "start_url": "/todo-list-react/",
@@ -7,7 +7,7 @@
   "theme_color": "hsl(248, 100%, 68%)",
   "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "display": "browser",
-  "scope": "/todo-list-react/",
+  "scope": "/todo-list-react",
   "description": "A todo list webapp with offline support",
   "icons": [
     {
@@ -17,6 +17,16 @@
     },
     {
       "src": "src/assets/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "src/assets/android-chrome-192x192-square.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "src/assets/android-chrome-512x512-square.png",
       "sizes": "512x512",
       "type": "image/png"
     }
