--- a/assets/manifest-hn0jZ-fM.json
+++ b/assets/manifest-hn0jZ-fM.json
@@ -11,12 +11,22 @@
   "description": "A todo list webapp with offline support",
   "icons": [
     {
-      "src": "src/assets/android-chrome-192x192.png",
+      "src": "/assets/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "src/assets/android-chrome-512x512.png",
+      "src": "/assets/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/android-chrome-192x192-square.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/android-chrome-512x512-square.png",
       "sizes": "512x512",
       "type": "image/png"
     },
